Update overflow issues

--- a/stylesheets/highlighting.css
+++ b/stylesheets/highlighting.css
@@ -200,3 +200,7 @@
 .rouge-gutter {
     width: 2rem;
 }
+
+.rouge-code {
+    overflow: auto;
+}
